# rag-china-travel-ai-agent

./: .env.sample  LICENSE  README.md  main.py  pyproject.toml
agents/: flight_agent.py  food_agent.py  hotel_agent.py  itinerary_agent.py  shopping_agent.py
rag/: add_data.py  get_data.py
rag/data/: china-travel-q&a.json
rag/vector_db/: pinecone.py
