[project]
name = "rag-china-travel-ai-agent"
version = "0.1.0"
description = "rag china travel ai agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pinecone>=7.0.1",
    "pydantic-ai>=1.68.0",
    "pydantic-ai-slim[bedrock,duckduckgo,web]>=1.68.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.41.0",
]
